Assignment 2: Update authentication screen and backend logic, also connected to other activities with the auth info

--- a/Assignment2/app/src/main/AndroidManifest.xml
+++ b/Assignment2/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity android:name=".DetailRenting">
 
         </activity>
+
+        <activity android:name=".LoginActivity">
+
+        </activity>
     </application>
 
 </manifest>
